# x-browser

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/java/cn/navigational/xbrowser/app/: AbstractFXMLController.java  AbstractWindowController.java  XBrowser.java
app/src/main/java/cn/navigational/xbrowser/app/assets/: XBrowserResource.java  XPlayerResource.java  XResource.java
app/src/main/java/cn/navigational/xbrowser/app/control/: PopupMenu.java
app/src/main/java/cn/navigational/xbrowser/app/control/skin/: PopupMenuSkin.java
app/src/main/java/cn/navigational/xbrowser/app/controller/: MainViewController.java  WebSourceCodeViewController.java
app/src/main/java/cn/navigational/xbrowser/app/controller/controls/: NavigatorBarController.java
app/src/main/java/cn/navigational/xbrowser/app/controller/popup/: PopupMenuController.java
app/src/main/java/cn/navigational/xbrowser/app/controller/web/: AbstractWebPageController.java
app/src/main/java/cn/navigational/xbrowser/app/dialog/: EyeColorDialog.java  TextAreaDialog.java  WebCodeDialog.java
app/src/main/java/cn/navigational/xbrowser/app/event/: WebEngineEvent.java
app/src/main/java/cn/navigational/xbrowser/app/util/: ImageUtil.java  PopMessageUtil.java  PopupMenuUtil.java  WebEngineUtil.java
app/src/main/java/cn/navigational/xplayer/app/: AbstractFXMLController.java  AbstractWindowController.java  XPlayer.java
app/src/main/java/cn/navigational/xplayer/app/assets/: XPlayerResource.java
app/src/main/java/cn/navigational/xplayer/app/controller/: MainViewController.java
app/src/main/java/cn/navigational/xplayer/app/controller/controls/: NavigatorBarController.java
app/src/main/java/cn/navigational/xplayer/app/controller/web/: AbstractWebPageController.java
app/src/main/java/cn/navigational/xplayer/app/event/: WebEngineEvent.java
app/src/main/resources/cn/navigational/xbrowser/app/assets/css/: Application.css  MainViewStyle.css
app/src/main/resources/cn/navigational/xbrowser/app/assets/fxml/: MainView.fxml  WebSourceCodeView.fxml
app/web/html/: index.html
app/web/js/: index.js
gtk/: CMakeLists.txt  assets.c  common.c  env.in  form.c  fortune.c  main.c  my.c  note.c  note_setting.c  record_detail.c  router.c  ui_util.c  x.c  x.xml  xd_operate.c  xr_generate.c
gtk/assets/config/: disburse.json
gtk/assets/css/: keyword.css  nav_style.css
gtk/data/: xb.db
gtk/include/: assets.h  common.h  env.h  file_util.h  form.h  fortune.h  json_util.h  my.h  note.h  note_setting.h  record_detail.h  router.h  string_util.h  ui_util.h  x.h  x_lite.h  xd_operate.h
gtk/macro/: macro.c
gtk/util/: CMakeLists.txt  file_util.c  json_util.c  mem_util.c  number_util.c  string_util.c
gtk/util/includes/: mem_util.h  string_util.h
kit/: build.gradle
kit/src/main/c/: CMakeLists.txt  assets.h  config.h.in  main.c
kit/src/main/c/macro/: CMakeLists.txt  macro.c  macro.h
kit/src/main/c/screen/: CMakeLists.txt  screen.c  screen.h
kit/src/main/c/util/: CMakeLists.txt  file_util.c  number_util.c  util.c  util.h
kit/src/main/c/util/includes/: file_util.h  number_util.h
kit/src/main/java/cn/navigational/xbrowser/kit/: Closeable.java  Location.java
kit/src/main/java/cn/navigational/xbrowser/kit/downloader/: XDownloadHelper.java
kit/src/main/java/cn/navigational/xbrowser/kit/enums/: SearchEngine.java
kit/src/main/java/cn/navigational/xbrowser/kit/util/: HttpUtil.java  LocationUtil.java  NumberUtil.java  StringUtil.java  URLUtil.java  XMLUtil.java
kit/src/main/java/cn/navigational/xplayer/kit/: Closeable.java  Location.java
kit/src/main/java/cn/navigational/xplayer/kit/enums/: SearchEngine.java
kit/src/main/java/cn/navigational/xplayer/kit/util/: StringUtil.java  URLUtil.java
parser/src/main/java/cn/navigational/xbrowser/parser/: XBrowserParser.java
parser/src/main/java/cn/navigational/xbrowser/parser/impl/: IQiVIPVideoParser.java  TencentVIPVideoParser.java
(+13 files in other folders)
